--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance http://www.springmodules.org/schema/cache/springmodules-cache.xsd "
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd ">
+	
+	
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.yaa.site</groupId>
@@ -139,7 +142,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
             <scope>provided</scope>
         </dependency>
 		<!--markdown处理-->
@@ -183,6 +185,20 @@
 					</archive>
 				</configuration>
 			</plugin>
+			
+			<resources>
+	            <resource>
+	                <directory>src/main/resources</directory>
+	                <includes>
+	                    <include>*.properties</include>
+	                    <include>*.xml</include>
+	                    <include>templates/front/*.html</include>
+	                    <include>templates/admin/*.html</include>
+	                </includes>
+	                <filtering>false</filtering>
+	            </resource>
+	        </resources>
+			    
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
