--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,8 +32,10 @@ spring:
         min-idle: 5
         max-idle: 20
         max-total: 20
+#在application.properties文件中引入日志配置文件  
+#=====================================  log  =============================  
 logging:
-  file: log/site.log
+  config: classpath:logback-boot.xml  
 
   
 #mybatis配置
